Fix heading labels in a popover being misaligned

--- a/src/gtk-4.0/widgets/_popovers.scss
+++ b/src/gtk-4.0/widgets/_popovers.scss
@@ -77,7 +77,6 @@ popover.background {
     > contents {
         border-radius: rem(6px);
 
-        label.heading,
         label.h4 {
             margin: 0 rem(12px);
         }
